# Versai

./: .gitignore  .ignore  README.md  Versai.uproject
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultScalability.ini
Content/: BP_VersaiTest.uasset  NewNiagaraSystem.uasset
Content/Saved/SavedGames/: SaveGame.uasset
Plugins/GameFeatures/CausalLM/: CausalLM.uplugin
Plugins/GameFeatures/CausalLM/Content/: CausalLM.uasset
Plugins/GameFeatures/CausalLM/Python/: README.md  config.py  mainfest.json  manifest.json  model.py  trainer.py
Plugins/GameFeatures/ExampleGameFeaturePlugin/: ExampleGameFeaturePlugin.uplugin
Plugins/GameFeatures/ExampleGameFeaturePlugin/Content/: ExampleGameFeaturePlugin.uasset
Plugins/SharedMemory/: SharedMemory.uplugin
Plugins/SharedMemory/Source/: SharedMemory.Build.cs
Python/: launch_training.bat  pyproject.toml  requirements.txt
Python/Versai/: config.py  core.py  data_loader.py  gguf_exporter.py  gguf_fileops.py  model.py  schemas.py  settings.py  shared_memory.py  structured_buffer.py  training.py
Python/Versai/data/: data_loader.py  dataset.py
Source/: Versai.Target.cs  VersaiEditor.Target.cs
Source/Versai/: MyClass.h  Versai.Build.cs  Versai.cpp  Versai.h
docs/: Architecture Design Document_v3.md  Architecture_Design_Document.md  Development_Workflow.md  Game Design Document.md  GameDevPlan_Versai.md  Game_Design_Document.md  Models_DLC.md  NDI-Based Design.md  Python_Playground_API.md  SharedMemory_StructuredBuffer_Design.md  UE5_Optimization_Guide.md  Versai UI-UX Design Guide.md
(+11 files in other folders)
