[project]
name = "Versai"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "torch",
    "numpy",
    "soundcard",
    "gguf",
    "psutil",
    "torchaudio",
    "torchvision",
    "numba"
]

[tool.rider]
python.interpreter = ".venv\\Scripts\\python.exe"   # Rider will pick this up

[tool.setuptools]
packages = ["Versai"]